--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "restart": "node start.js restart"
   },
   "dependencies": {
-    "better-sqlite3": "^8.3.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "sqlite3": "^5.1.7"
+    "mongodb": "^5.7.0"
   }
 }
